--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,7 @@ voxel_objs += physics.o
 voxel_objs += profile.o
 voxel_objs += simplex.o
 voxel_objs += renderer.o
+voxel_objs += roam.o
 voxel_objs += sz.o
 voxel_objs += terraform.o
 voxel_objs += voxel.o
