add recipes, workbench crafting

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,6 +15,7 @@ voxel_objs += media.o
 voxel_objs += physics.o
 voxel_objs += profile.o
 voxel_objs += simplex.o
+voxel_objs += recipes.o
 voxel_objs += renderer.o
 voxel_objs += roam.o
 voxel_objs += sz.o
