add object drops

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ ALL_CFLAGS += -I$(shell pwd)
 voxel_objs += camera.o
 voxel_objs += chunk.o
 voxel_objs += context.o
+voxel_objs += drop.o
 voxel_objs += fps_manager.o
 voxel_objs += inventory.o
 voxel_objs += main_loop.o
