renderer renamed to vertex_buffer

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ voxel_objs += physics.o
 voxel_objs += profile.o
 voxel_objs += simplex.o
 voxel_objs += recipes.o
-voxel_objs += renderer.o
+voxel_objs += vertex_buffer.o
 voxel_objs += roam.o
 voxel_objs += shader.o
 voxel_objs += sz.o
