commandline evolves into cli
The cli struct is only responsible for the line buffer and history;
whereas Tcl bindings are in tcl_commands.[ch] and the interpreter is
directly referenced by context.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,8 @@ ALL_CFLAGS += -I$(shell pwd)
 
 voxel_objs += camera.o
 voxel_objs += chunk.o
+voxel_objs += cli.o
 voxel_objs += context.o
-voxel_objs += commands.o
 voxel_objs += drop.o
 voxel_objs += event.o
 voxel_objs += fps_manager.o
@@ -25,6 +25,7 @@ voxel_objs += render.o
 voxel_objs += vertex_buffer.o
 voxel_objs += shader.o
 voxel_objs += sz.o
+voxel_objs += tcl_commands.o
 voxel_objs += terraform.o
 voxel_objs += tone_mapper.o
 voxel_objs += types.o
