--- a/src/Makefile
+++ b/src/Makefile
@@ -11,13 +11,13 @@ voxel_objs += cli.o
 voxel_objs += context.o
 voxel_objs += event.o
 voxel_objs += fps_manager.o
-voxel_objs += flowsim.o
+#voxel_objs += flowsim.o
 voxel_objs += inventory.o
 voxel_objs += lighting.o
 voxel_objs += main_loop.o
 voxel_objs += media.o
 voxel_objs += physics.o
-voxel_objs += profile.o
+#voxel_objs += profile.o
 voxel_objs += simplex.o
 voxel_objs += recipes.o
 voxel_objs += render.o
@@ -29,6 +29,8 @@ voxel_objs += terraform.o
 voxel_objs += tone_mapper.o
 voxel_objs += types.o
 voxel_objs += update.o
+voxel_objs += entity.o
+voxel_objs += roaming_entity.o
 voxel_objs += bench_entity.o
 voxel_objs += board_entity.o
 voxel_objs += crate_entity.o
