add PlayerEntity class
This class holds the actual player logic, including rendering the HUD
and interacting with other entities.

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,6 +36,7 @@ voxel_objs += board_entity.o
 voxel_objs += crate_entity.o
 voxel_objs += pipe_entity.o
 voxel_objs += drop_entity.o
+voxel_objs += player_entity.o
 
 szcat_objs += sz.o
 
