add autogenerated headers to all target in src/Makefile
I thought the files would be generated as a part of the natural flow,
but it doesn't seem to work that way.

--- a/src/Makefile
+++ b/src/Makefile
@@ -54,7 +54,7 @@ install_files = $(addprefix $(DESTDIR)$(datadir)/,$(files))
 
 # The default target of this makefile
 .PHONY: all
-all: $(programs)
+all: v2.h v3.h v4.h box2.h box3.h $(programs)
 
 .PHONY: clean
 clean:
