cli renamed command_line
To use the same naming conventions as the rest of the code, the
CommandLine class goes in the command_line files.

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ voxel_objs += camera.o
 voxel_objs += shard.o
 voxel_objs += chunk.o
 voxel_objs += world.o
-voxel_objs += cli.o
+voxel_objs += command_line.o
 voxel_objs += context.o
 voxel_objs += fps_manager.o
 #voxel_objs += flowsim.o
